# 2

./: .gitignore  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hybrid/imgui/: GameDetector.java  Injector.java  MainActivity.java  ModManager.java  OverlayService.java
app/src/main/java/uk/lgl/: OverlayESP.java  OverlayMain.java  SHMBridge.java
java/uk/lgl/: OverlayMain.java
jni/: BuildExpiry.h  CMakeLists.txt  injector_main.cpp  overlay_launcher.h  shared_data.h
jni/Dobby/: CMakeLists.txt
jni/Dobby/prebuilt/: README.md
jni/Frida/: README.md
jni/Frida/gumpp/: gumpp.hpp  invocationcontext.hpp
jni/Il2cpp/: Il2cpp.cpp  Il2cpp.cpp.bak  Il2cpp.h  il2cpp-api-functions.h  il2cpp-class.cpp  il2cpp-class.h
jni/Il2cpp/xdl/: xdl_lzma.c  xdl_util.c
jni/Includes/: Logger.cpp  Logger.h  TypeUtils.h  Utils.cpp  Utils.h  aarch64_atomics_stub.c
jni/Menu/: ImGui.cpp  ImGui.h  MainWindow.cpp  MainWindow.h
jni/Tool/: ClassesTab.h  CodeExporter.h  CodeGenerator.h  ESPManager.h  ESP_CodeExporter.h  Frida.cpp  Frida.h  Keyboard.cpp  Keyboard.h  Patcher.cpp  Patcher.h  PopUpSelector.cpp  PopUpSelector.h  ProjectSessionManager.cpp  ProjectSessionManager.h  Tab_Dumper.cpp  Tab_Dumper.h  Tab_ESP.cpp  Tab_ESP.h  Tab_Inspector.cpp  Tab_Inspector.h  Tab_Network.cpp  Tab_Network.h  Tab_Tracer.cpp  Tab_Tracer.h  Tool.cpp  Tool.h  Unity.cpp  Unity.h  Util.cpp  Util.h
jni/Tool/sub/: ClassesTab_Shared.h  View_ClassBrowser.cpp  View_FieldPatcher.cpp  View_Hierarchy.cpp  View_MemoryHex.cpp  View_MethodAnalyzer.cpp
jni/asmjit/: CMakeLists.txt
jni/asmjit/src/asmjit/arm/: armformatter.cpp
jni/asmjit/src/asmjit/core/: api-build_p.h  operand.h
jni/imgui/: imconfig.h  imgui.cpp  imgui_draw.cpp
jni/imgui/backends/: imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_opengl3.cpp
jni/imgui_ext/: egl_standalone.cpp  egl_standalone.h  exports.map  ext_stubs.cpp  imgui_render.cpp  imgui_render.h  jni_bridge.cpp
jni/injector/: nullelf.cpp  nullproc.cpp  nullutils.cpp  pnull.cpp
jni/injector/null/: nullelf.h
jni/injector/trace/: nullproc.h  pnull.h
jni/internal/: internal_main.cpp  shm.h
jni/ipc/: ipc_client.cpp  ipc_client.h  ipc_protocol.h  ipc_server.cpp  ipc_server.h  rpc_handler.cpp  rpc_handler.h
